# Python-ACAD-Tools

./: .coverage  .cursorignore  .cursorindexingignore  .cursorrules.txt  .flake8  .git-conda-hook  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .radon  1_cursor_fixing_half_implemented_app_and.md  2_cursor_testing_app_files_and_error_fixi.md  3_cursor_fixing_python_dxf_planner__DXF_GEN.md  ACTIONABLE_COMMENTS_AND_TODOS.MD  ARCHITECTURE.md  ARCHITECTURE_DEVIATIONS_REPORT.MD  AUTO_SYNC_GUIDE.md  CLIPPY_ASSUMPTION_REVIEW_PROMPTS.MD  CODEBASE_REVIEW_AND_AUDIT_GUIDE.MD  COMPREHENSIVE_VALIDATION_SUMMARY.md  DISCOVERY_LAYERS_GUIDE.md  DUPLICATE_NAME_FIX.md  DUPLICATION_FINDINGS.MD  DXFPLANNER_REVIEW.MD  DXFPLANNER_REVIEW.md  HANDLE_RECOVERY_GUIDE.md  INFO  OLD_DONT_USE_MAY_BE_INCORRECT_PROJECT_ARCHITECTURE.md  OTHER_CODE_QUALITY_OBSERVATIONS.MD  PLANNING_IterativeDxfOutput.md  PLANNING_OptionalOperationLayerNames.md  PROJECT_ARCHITECTURE.MD  PROJECT_ARCHITECTURE.md  PROJECT_STANDARDS.MD  PROJECT_STANDARDS.md  README.md  REFACTORING_PLAN.MD  REFACTORING_SUMMARY.md  REFACTORPLAN.md  (+96 more)
OLADPP/: styles.yaml
OLADPP/src/: reduced_dxf_creator.py
OLD/: styles.yaml
OLD.projects/Bibow/: project.yaml
OLD.projects/Plasten/: dxf_transfer.yaml  update_from_source.yaml
OLD.projects/Torgelow/: block_inserts.yaml  legends.yaml  wmts_wms_layers.yaml
OLD.projects/Waren/: geom_layers.yaml  legends.yaml  path_arrays.yaml  viewports.yaml  wmts_wms_layers.yaml
OLD.projects/WarenVM/: geom_layers.yaml  project.yaml  web_services.yaml
OLD/src/: easyocr_patch.py  project_loader.py  shapefile_utils.py  wmts_downloader.py
OLDAPP/: aci_codes.csv  aci_codes.txt  aci_colors.css  convert_aci_txt_to_csv.py  del_update_from_source.yaml  gen_operations.py  get_styles_from_dxf.py
attic/: cashplanung  rechnungsbeispiel.txt  test_auto_sync.py  test_final_result.py
diagrams/: code_flow.puml  style_flow.puml
docs/: INDEX.md  TODO.md
docs/architecture/: ARCHITECTURE.md
docs/development/: PHASES.md  PHASE_1_CORE.md  PHASE_2_GEOMETRY.md  PHASE_3_EXPORT.md  PHASE_4_INTEGRATION.md
docs/guidelines/: BOUNDARIES.md  CODE_QUALITY.md  INTEGRATION.md  LOGGING.md  TDD.md  TESTING.md
docs/guides/: selective_export.md
external_data/: parks_and_recreation.geojson  parks_and_recreation.geojson.backup  public_facilities.geojson
projects/: Plasten.yaml
projects/Bibow/: block_inserts.yaml  geom_layers.yaml  legends.yaml  path_arrays.yaml  project.yaml  text_inserts.yaml  viewports.yaml
projects/DebugGemeinde/: geom_layers.yaml  project.yaml
projects/ExampleProject/: README.md  project.yaml
projects/Friedrichshof/: geom_layers.yaml  project.yaml
projects/Georgendorf/: geom_layers.yaml  project.yaml
projects/Plasten/: ARCHITECTURE_PLAN.md  AgriPV.md  block_inserts.yaml  dxf_operations copy.yaml  dxf_transfer.yaml  exclusion_zones_table.md  geom_layers copy.yaml  geom_layers.yaml  geom_layers.yaml.backup_20251003_112333  legends.yaml  path_arrays.yaml  project.yaml  text_inserts.yaml  update_from_source.yaml  viewports.yaml  wmts_wms_layers  wmts_wms_layers.yaml
projects/Plasten vor AgriPV/: dxf_transfer.yaml  geom_layers.yaml
projects/SyncAutoTest/: block_inserts.yaml  project.yaml  text_inserts.yaml  viewports.yaml
projects/Test/: create_test_data.py  geom_layers.yaml  project.yaml  styles.yaml
projects/Torgelow/: block_inserts.yaml  geom_layers.yaml  legends.yaml  path_arrays.yaml  project.yaml  text_inserts.yaml  viewports.yaml  wmts_wms_layers.yaml
projects/Torgelow2/: block_inserts.yaml  geom_layers copy.yaml  geom_layers.yaml  legends.yaml  project.yaml  styles.yaml  viewports.yaml  wmts_wms_layers.yaml
projects/Waren/: block_inserts.yaml  dxf_operations copy.yaml  dxf_operations.yaml  dxf_transfer.yaml  geom_layers.nach_edit_3_.yaml  geom_layers.yaml  lagefaktor.yaml  legends.yaml  path_arrays.yaml  project.yaml  text_inserts.yaml  update_from_source.yaml
projects/WarenVM/: geom_layers.yaml
projects/example/: labels.yaml
projects/test_new_structure/: web_services.yaml
projects/test_project/: custom_styles.yaml  geom_layers.yaml  geom_layers_comprehensive_validation_test.yaml  geom_layers_validation_test.yaml  legends.yaml  project.yaml  project_custom_styles.yaml  test_data.geojson
projects/test_pull_mode/: project.yaml
pycad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reference_files/: amenities_catalog.geojson  healthcare_locations.geojson
scripts/: run-hooks.sh
src/: __init__.py  block_insert_manager.py  block_placement_utils.py  contour_processor.py  dfx_utils.py  dump_to_shape.py  dxf_exporter.py  dxf_loader.py  dxf_processor.py  dxf_source_extractor.py  dxf_transfer.py  dxf_utils.py  lagefaktor.py  layer_processor.bak.py  layer_processor.py  layer_processor_new.py  legend_creator.py  main.py  new.py  path_array.py  project_loader.original.py  project_loader.py  project_templates.py  reduced_dxf_creator.py  reports.py  shapefile_utils.py  style_manager.py  sync_hash_utils.py  sync_manager_base.py  sync_property_schemas.py  text_insert_manager.py  unified_sync_processor.py  utils.py  viewport_manager.py  wmts_downloader.py
src/adapters/: ezdxf_adapter.py
src/cli/: __init__.py  __main__.py  commands.py  main.py  main_cli.py
src/config/: block_insert_config.py  color_config.py  config_manager.py  geometry_layer_config.py  legend_config.py  path_array_config.py  position_config.py  project_config.py  style_config.py  text_insert_config.py  viewport_config.py  web_service_config.py
src/core/: __init__.py  application.py  config.py  container.py  document.py  exceptions.py  factories.py  operations.py  pipeline.py  processor.py  project.py  project_loader.py  style_manager.py  types.py  utils.py
src/data/: __init__.py  shapefile_utils.py
src/domain/: common_types.py  config_models.py  (+6 more)
src_old/: main.py
templates/: admin_boundaries.yaml  baugrenze_chain.yaml  geltungsbereich.yaml  zone_report.yaml
test_data/: sync_auto_test.dxf  sync_auto_test.dxf.ezdxf_bak
tests/: __init__.py  conftest.py  test_example_markers.py
(+467 files in other folders)
